[project]
name = "langgraphui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.10",
    "langchain-openai>=1.1.10",
    "langgraph>=1.0.10",
    "langgraph-api>=0.7.67",
    "langgraph-cli[inem]>=0.4.14",
    "python-dotenv>=1.2.2",
]
